[package]
name = "rsbn"
version = "0.1.0"
authors = ["Steven Holtzen <sholtzen@gmail.com>"]
edition = "2018"

[lib]
name = "rsbn"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
assert_approx_eq = "1.1.0"
rsdd = { git = "https://github.com/SHoltzen/rsdd" }
